--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
         }
     },
     "require": {
-        "php": ">=7.2",
-        "illuminate/support": "^6.0"
+        "php": ">=5.6",
+        "illuminate/support": "^5.0|^6.0"
     },
     "require-dev": {
-        "illuminate/routing": "^6.0",
-        "illuminate/http": "^6.0"
+        "illuminate/routing": "^5.0|^6.0",
+        "illuminate/http": "^5.0|^6.0"
     },
     "extra": {
         "laravel": {
